# MakerLab

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  INSTALL.md  JETSON_SETUP.md  README.md  pyproject.toml
app/: config.py  dataset_browser.py  inferring.py  jobs.py  main.py  recording.py  replaying.py  teleoperating.py  training.py
deploy/: lelab-station.service  makerlab-station.service
docs/: Intended Usage.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
jetson/: README.md
lelab/: arm_identity.py  auto_calibrate.py  calibrate.py  camera_enumeration.py  camera_preview.py  datasets.py  identify.py  jobs.py  merge.py  models.py  motor_power.py  record.py  rest_pose.py  rollout.py  server.py  teleoperate.py  train.py  update.py  wiggle.py
makerlab/: __init__.py  __version__.py  auto_calibrate.py  calibrate.py  camera_identity.py  camera_preview.py  datasets.py  identify.py  jobs.py  merge.py  models.py  motor_power.py  record.py  rest_pose.py  rollout.py  server.py  teleoperate.py  torque.py  train.py  update.py  wiggle.py
reference/: 2026-07-08-flow-redesign-wireframes.md  2026-07-08-resolve-stages-spec.md
reference-design/: collect.html  market.html  record-live.html
tests/: conftest.py  mocks.py  test_arm_identity.py  test_auto_calibrate.py  test_calibrate.py  test_camera_preview.py  test_datasets.py  test_devices.py  test_hub_listings.py  test_identify.py  test_jobs.py  test_log_endpoints.py  test_merge.py  test_models.py  test_motor_power.py  test_record.py  (+17 more)
(+247 files in other folders)
